/*
 * Created on 2019-08-02 ( Date ISO 2019-08-02 - Time 22:20:41 )
 * Generated by Telosys ( http://www.telosys.org/ ) version 3.0.0
 */
package cai.peter.vision.persistence.repository;

import cai.peter.vision.persistence.entity.Feed;
import cai.peter.vision.persistence.entity.FeedEntry;
import cai.peter.vision.persistence.entity.FeedSubscription;
import cai.peter.vision.persistence.entity.User;
import cai.peter.vision.rest.dto.UnreadCount;
import org.springframework.data.jpa.repository.JpaRepository;
import org.springframework.data.jpa.repository.JpaSpecificationExecutor;
import org.springframework.data.jpa.repository.Query;
import org.springframework.stereotype.Repository;

/**
 * Spring data Jpa repository for "Feedentries" <br>
 * @author Telosys (http://www.telosys.org/) version 3.0.0
 */
@Repository
public interface FeedentriesRepository extends JpaRepository<FeedEntry, Long>, JpaSpecificationExecutor<FeedEntry> {
    @Query(value = "select e.id from FeedEntry e where e.guid = ?1 and e.feed = ?2")
    Long findExisting(String guid, Feed feed);


}