/*
 * Created on 2019-08-02 ( Date ISO 2019-08-02 - Time 22:20:41 )
 * Generated by Telosys ( http://www.telosys.org/ ) version 3.0.0
 */
package cai.peter.vision.persistence.repository;

import cai.peter.vision.persistence.entity.Feed;
import org.springframework.data.jpa.repository.JpaRepository;
import org.springframework.data.jpa.repository.JpaSpecificationExecutor;
import org.springframework.data.jpa.repository.Query;
import org.springframework.stereotype.Repository;

import java.util.Date;
import java.util.List;

/**
 * Spring data Jpa repository for "Feeds" <br>
 *
 * @author Telosys (http://www.telosys.org/) version 3.0.0
 */
@Repository
public interface FeedsRepository extends JpaRepository<Feed, Long>, JpaSpecificationExecutor<Feed> {

  @Query(value = "select f from Feed f where f.url = ?1")
  Feed findByRawUrl(String url);
  @Query(value = "select f from Feed f where f.normalizedUrl = ?1")
  Feed findByUrl(String url);

    //TODO:
//    List<Feed> findNextUpdatable(int count, Date lastLoginThreshold);
}
