/*
 * Created on 2019-08-02 ( Date ISO 2019-08-02 - Time 22:20:41 )
 * Generated by Telosys ( http://www.telosys.org/ ) version 3.0.0
 */
package cai.peter.vision.persistence.repository;

import cai.peter.vision.persistence.entity.Feed;
import cai.peter.vision.persistence.entity.FeedSubscription;
import cai.peter.vision.persistence.entity.User;
import org.springframework.data.jpa.repository.JpaRepository;
import org.springframework.data.jpa.repository.JpaSpecificationExecutor;
import org.springframework.data.jpa.repository.Query;
import org.springframework.stereotype.Repository;

import java.util.List;

/**
 * Spring data Jpa repository for "Feedsubscriptions" <br>
 */
@Repository
public interface FeedsubscriptionsRepository extends JpaRepository<FeedSubscription, Long>, JpaSpecificationExecutor<FeedSubscription> {
    @Query(value = "select s from FeedSubscription s where s.user = ?1 and s.feed = ?2")
    FeedSubscription findByFeedPerUser(User user, Feed feed);


    @Query(value = "select s from FeedSubscription s where s.user = ?1 and s.id = ?2")
    FeedSubscription findByUser(User user, Long subId);

    @Query(value = "select s from FeedSubscription s where s.user = ?1")
    List<FeedSubscription> findUserAll(User user);

    List<FeedSubscription> getByUser(User user);

    @Query(value = "select s from FeedSubscription  s where s.feed = ?1")
    List<FeedSubscription> findByFeed(Feed feed);
}