@startuml umlc-CategoryController_Depth3
' Generated by uml-gen  © Peppermint
' https://github.com/petercai/uml-gen-java
' https://github.com/petercai/Vision/tree/master/uml
' https://github.com/petercai/Vision
' 
' Optimized for viewing with VS Code + UMLMark © Peppermint
' https://github.com/petercai/vscode-umlmark
' 
' Eclipse alternative: UMLMark © Peppermint
' https://github.com/petercai/UMLMark-release
' https://marketplace.eclipse.org/content/umlmark
legend top center
  [[uml/umlc-CategoryController.yaml:1 ⚓uml/umlc-CategoryController.yaml]]
end legend
top to bottom direction
hide empty members

class VisionConfiguration [[src/main/java/cai/peter/vision/common/VisionConfiguration.java:21]] {
  + [[src/main/java/cai/peter/vision/common/VisionConfiguration.java:31 VisionConfiguration()]]
  + [[src/main/java/cai/peter/vision/common/VisionConfiguration.java:55 getVersion()]]
  + [[src/main/java/cai/peter/vision/common/VisionConfiguration.java:59 getGitCommit()]]
}
class AbstractFaviconFetcher [[src/main/java/cai/peter/vision/favicon/AbstractFaviconFetcher.java:13]] {
  + [[src/main/java/cai/peter/vision/favicon/AbstractFaviconFetcher.java:22 fetch()]]
  # [[src/main/java/cai/peter/vision/favicon/AbstractFaviconFetcher.java:24 isValidIconResponse()]]
}
class FeedQueues [[src/main/java/cai/peter/vision/feed/FeedQueues.java:23]] {
  + [[src/main/java/cai/peter/vision/feed/FeedQueues.java:39 take()]]
  + [[src/main/java/cai/peter/vision/feed/FeedQueues.java:52 add()]]
  + [[src/main/java/cai/peter/vision/feed/FeedQueues.java:115 giveBack()]]
  + [[src/main/java/cai/peter/vision/feed/FeedQueues.java:131 isAllDone()]]
}
class FeedRefreshContext [[src/main/java/cai/peter/vision/feed/FeedRefreshContext.java:10]] {
  + [[src/main/java/cai/peter/vision/feed/FeedRefreshContext.java:17 FeedRefreshContext()]]
}
interface FeedcategoriesRepository [[src/main/java/cai/peter/vision/persistence/repository/FeedcategoriesRepository.java:20]] {
  + [[src/main/java/cai/peter/vision/persistence/repository/FeedcategoriesRepository.java:22 findByName()]]
  + [[src/main/java/cai/peter/vision/persistence/repository/FeedcategoriesRepository.java:26 getByUser()]]
}
interface FeedentriesRepository [[src/main/java/cai/peter/vision/persistence/repository/FeedentriesRepository.java:21]] {
  + [[src/main/java/cai/peter/vision/persistence/repository/FeedentriesRepository.java:23 findExisting()]]
}
interface FeedentrystatusesRepository [[src/main/java/cai/peter/vision/persistence/repository/FeedentrystatusesRepository.java:26]] {
  + [[src/main/java/cai/peter/vision/persistence/repository/FeedentrystatusesRepository.java:30 getByUserAndSubscriptionAndEntry()]]
  + [[src/main/java/cai/peter/vision/persistence/repository/FeedentrystatusesRepository.java:33 findStarred()]]
  + [[src/main/java/cai/peter/vision/persistence/repository/FeedentrystatusesRepository.java:36 getReadCount()]]
  + [[src/main/java/cai/peter/vision/persistence/repository/FeedentrystatusesRepository.java:40 getUnreadCount()]]
}
interface FeedsRepository [[src/main/java/cai/peter/vision/persistence/repository/FeedsRepository.java:21]] {
  + [[src/main/java/cai/peter/vision/persistence/repository/FeedsRepository.java:24 findByRawUrl()]]
  + [[src/main/java/cai/peter/vision/persistence/repository/FeedsRepository.java:26 findByUrl()]]
}
interface FeedsubscriptionsRepository [[src/main/java/cai/peter/vision/persistence/repository/FeedsubscriptionsRepository.java:20]] {
  + [[src/main/java/cai/peter/vision/persistence/repository/FeedsubscriptionsRepository.java:22 findByFeedPerUser()]]
  + [[src/main/java/cai/peter/vision/persistence/repository/FeedsubscriptionsRepository.java:26 findByUser()]]
  + [[src/main/java/cai/peter/vision/persistence/repository/FeedsubscriptionsRepository.java:29 findUserAll()]]
  + [[src/main/java/cai/peter/vision/persistence/repository/FeedsubscriptionsRepository.java:32 getByUser()]]
  + [[src/main/java/cai/peter/vision/persistence/repository/FeedsubscriptionsRepository.java:34 findByFeed()]]
}
class FeedEntryService [[src/main/java/cai/peter/vision/persistence/service/FeedEntryService.java:15]] {
  + [[src/main/java/cai/peter/vision/persistence/service/FeedEntryService.java:26 markEntry()]]
  + [[src/main/java/cai/peter/vision/persistence/service/FeedEntryService.java:44 starEntry()]]
  + [[src/main/java/cai/peter/vision/persistence/service/FeedEntryService.java:67 markStarredEntries()]]
}
class FeedService [[src/main/java/cai/peter/vision/persistence/service/FeedService.java:19]] {
  + [[src/main/java/cai/peter/vision/persistence/service/FeedService.java:29 FeedService()]]
  + [[src/main/java/cai/peter/vision/persistence/service/FeedService.java:43 findOrCreate()]]
  + [[src/main/java/cai/peter/vision/persistence/service/FeedService.java:57 fetchFavicon()]]
}
class FeedSubscriptionService [[src/main/java/cai/peter/vision/persistence/service/FeedSubscriptionService.java:21]] {
  + [[src/main/java/cai/peter/vision/persistence/service/FeedSubscriptionService.java:39 subscribe()]]
  + [[src/main/java/cai/peter/vision/persistence/service/FeedSubscriptionService.java:43 subscribe()]]
  + [[src/main/java/cai/peter/vision/persistence/service/FeedSubscriptionService.java:47 subscribe()]]
  + [[src/main/java/cai/peter/vision/persistence/service/FeedSubscriptionService.java:75 unsubscribe()]]
  + [[src/main/java/cai/peter/vision/persistence/service/FeedSubscriptionService.java:86 refreshAll()]]
  + [[src/main/java/cai/peter/vision/persistence/service/FeedSubscriptionService.java:94 getUnreadCount()]]
}
class CategoryController [[src/main/java/cai/peter/vision/rest/api/CategoryController.java:40]] {
  + [[src/main/java/cai/peter/vision/rest/api/CategoryController.java:88 getSubscriptions()]]
}

FeedQueues --> FeedsRepository
FeedQueues --> FeedRefreshContext
FeedEntryService --> FeedsubscriptionsRepository
FeedEntryService --> FeedentriesRepository
FeedEntryService --> FeedentrystatusesRepository
FeedService --> FeedsRepository
FeedService --> AbstractFaviconFetcher
FeedSubscriptionService --> FeedentrystatusesRepository
FeedSubscriptionService --> FeedsubscriptionsRepository
FeedSubscriptionService --> FeedService
FeedSubscriptionService --> FeedQueues
CategoryController --> FeedcategoriesRepository
CategoryController --> FeedentrystatusesRepository
CategoryController --> FeedsubscriptionsRepository
CategoryController --> FeedEntryService
CategoryController --> FeedSubscriptionService
CategoryController --> VisionConfiguration
@enduml
